# mcs-applied-optimization

./: .gitignore  aopt-exercise4.zip:Zone.Identifier
aopt-exercise0/: .gitignore  CMakeLists.txt  readme.txt
aopt-exercise0/GridSearch/: main.cc  unit_tests.cc
aopt-exercise0/include/Algorithms/: GridSearch.hh
aopt-exercise0/include/FunctionBase/: FunctionBaseSparse.hh
aopt-exercise0/include/Functions/: FunctionNonConvex2D.hh  FunctionQuadratic2D.hh  FunctionQuadraticND.hh
aopt-exercise0/include/Utils/: CSVExporter.hh  DerivativeChecker.hh  OptimalityChecker.hh  RandomNumberGenerator.hh
aopt-exercise0/output/: func1.csv
aopt-exercise1/: logo_uni_simple.eps  model.tex  report-exercise1.tex
aopt-exercise10/: CMakeLists.txt  Makefile  readme.txt
aopt-exercise10/EqualityConstrainedNewtonInfeasibleStart/: unit_tests.cc
aopt-exercise10/MassSpringSystem/: MassSpringSystemT.hh  MassSpringSystemT_impl.hh
aopt-exercise10/include/Algorithms/: AugmentedLagrangian.hh  GradientDescent.hh  GridSearch.hh  LineSearch.hh  NewtonMethods.hh
aopt-exercise10/include/Functions/: AugmentedLagrangianProblem.hh  CircleConstraint2D.hh  CircleConstraintSquared2D.hh  ConstrainedSpringElement2D.hh  FunctionNonConvex2D.hh  FunctionQuadratic2D.hh  FunctionQuadraticND.hh  MassSpringProblem2DDense.hh  MassSpringProblem2DLeastSquare.hh  MassSpringProblem2DSparse.hh  SpringElement2D.hh  SpringElement2DLeastSquare.hh  SpringElement2DWithLengthPSDHess.hh
aopt-exercise10/results/: augmented-lagrangian-2-12-12_nodes.csv  augmented-lagrangian-2-12-12_opt_edges.csv  augmented-lagrangian-2-12-12_opt_nodes.csv
aopt-exercise11/: CMakeLists.txt  readme.txt
aopt-exercise11/EigenTutorial/: unit_tests.cc
aopt-exercise11/EqualityConstrainedNewtonInfeasibleStart/: unit_tests.cc
aopt-exercise11/InteriorPoint/: unit_tests.cc
aopt-exercise11/MassSpringSystem/: MassSpringSystemT_impl.hh
aopt-exercise11/OptimalityChecker/: main.cc
aopt-exercise11/include/Algorithms/: AugmentedLagrangian.hh  ConvexityTest.hh  LineSearch.hh  (+2 more)
aopt-exercise11/results/: interior-point-2-1-10-10_edges.csv  interior-point-2-1-10-10_nodes.csv  interior-point-2-1-10-10_opt_nodes.csv
aopt-exercise2/: CMakeLists.txt  readme.txt
aopt-exercise2/ConvexityTests/: unit_tests.cc
aopt-exercise3/: .gitignore  CMakeLists.txt  readme.txt
aopt-exercise3/EigenTutorial/: unit_tests.cc
aopt-exercise3/GridSearch/: unit_tests.cc
aopt-exercise3/MassSpringProblemEvaluation/: CMakeLists.txt  main.cc  unit_tests.cc
aopt-exercise3/MassSpringSystem/: CMakeLists.txt  MassSpringSystemT.hh  MassSpringSystemT_impl.hh  SpringGraph.hh
aopt-exercise4/: .gitignore  CMakeLists.txt  readme.txt  test.ipynb
aopt-exercise4/MassSpringProblemEvaluation/: unit_tests.cc
aopt-exercise4/MassSpringSystem/: MassSpringSystemT.hh  MassSpringSystemT_impl.hh  SpringGraph.hh
aopt-exercise4/OptimalityChecker/: main.cc  unit_tests.cc
aopt-exercise4/part1-lagrange-duality-kkt-condition/: .gitignore  pyproject.toml
aopt-exercise4/part1-lagrange-duality-kkt-condition/part1/: helpers.py  part1.ipynb
aopt-exercise5/: .gitignore  CMakeLists.txt  readme.txt
aopt-exercise5/EigenTutorial/: CMakeLists.txt
aopt-exercise5/GradientDescent/: CMakeLists.txt  main.cc  unit_tests.cc
aopt-exercise5/MassSpringProblemEvaluation/: unit_tests.cc
aopt-exercise5/MassSpringSystem/: MassSpringSystemT.hh  MassSpringSystemT_impl.hh
aopt-exercise5/OptimalityChecker/: main.cc
aopt-exercise5/part1-exact-line-search-gradient-descent/: part1.ipynb  pyproject.toml
aopt-exercise5/results/: report-results.tex
aopt-exercise6/: .gitignore  CMakeLists.txt  parse_logs.awk  readme.txt
aopt-exercise6/EigenTutorial/: unit_tests.cc
aopt-exercise6/GradientDescent/: main.cc  unit_tests.cc
aopt-exercise6/MassSpringProblemEvaluation/: unit_tests.cc
aopt-exercise6/MassSpringSystem/: MassSpringSystemT_impl.hh
aopt-exercise6/NewtonMethods/: unit_tests.cc
aopt-exercise6/include/Algorithms/: GradientDescent.hh  LineSearch.hh  NewtonMethods.hh
aopt-exercise6/include/FunctionBase/: ParametricFunctionWrapper.hh
aopt-exercise6/include/Functions/: FunctionQuadratic2D.hh  MassSpringProblem2DDense.hh  SpringElement2DWithLength.hh  SpringElement2DWithLengthPSDHess.hh
aopt-exercise6/results/: newton_vs_gradient_results.tex  result.csv  result.tsv
aopt-exercise7/: CMakeLists.txt  parse_logs.awk  readme.txt  result_header.tsv
aopt-exercise7/ConvexityTests/: CMakeLists.txt
aopt-exercise7/GaussNewton/: main.cc  unit_tests.cc
aopt-exercise7/GradientDescent/: unit_tests.cc
aopt-exercise7/GridSearch/: CMakeLists.txt
aopt-exercise7/LBFGS/: main.cc
aopt-exercise7/MassSpringSystem/: MassSpringSystemT.hh  MassSpringSystemT_impl.hh
aopt-exercise7/include/Algorithms/: GradientDescent.hh  GridSearch.hh  LBFGS.hh  LineSearch.hh  NewtonMethods.hh
aopt-exercise7/include/Functions/: ConstrainedSpringElement2D.hh  ConstrainedSpringElement2DLeastSquare.hh  FunctionQuadratic2D.hh  FunctionQuadraticND.hh  MassSpringProblem2DDense.hh  MassSpringProblem2DLeastSquare.hh  MassSpringProblem2DSparse.hh  SpringElement2D.hh  SpringElement2DLeastSquare.hh  SpringElement2DWithLength.hh  SpringElement2DWithLengthLeastSquare.hh  SpringElement2DWithLengthPSDHess.hh
aopt-exercise7/results/: .gitignore  Exercise7_CarrelFontanaSchaller.tex  methods_comparison.tex  result.tsv
aopt-exercise8/: CMakeLists.txt  readme.txt
aopt-exercise8/EigenTutorial/: unit_tests.cc
aopt-exercise8/EqualityConstrainedNewton/: main.cc  unit_tests.cc
aopt-exercise8/GaussNewton/: unit_tests.cc
aopt-exercise8/MassSpringProblemEvaluation/: unit_tests.cc
aopt-exercise8/MassSpringSystem/: MassSpringSystemT.hh  MassSpringSystemT_impl.hh
aopt-exercise9/: CMakeLists.txt  readme.txt
aopt-exercise9/EqualityConstrainedNewtonInfeasibleStart/: main.cc
aopt-exercise9/MassSpringProblemEvaluation/: unit_tests.cc
aopt-exercise9/MassSpringSystem/: MassSpringSystemT.hh  MassSpringSystemT_impl.hh
plot_spring_system/: .gitignore  index.js  package-lock.json  package.json  produce_all_output.js  produce_system_svg.js
(+56 files in other folders)
