[tool.poetry]
name = "part1-lagrange-duality-kkt-condition"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
jupyter = "^1.0.0"
matplotlib = "^3.4.3"
numpy = "^1.21.3"
python = "3.9"
scipy = "^1.7.1"
sympy = "^1.9"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
